--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Selamat Datang di Akun Pinjaman Anda</h1>
+            <h1>Selamat Datang di Akun rupiah credit anda</h1>
         </header>
 
         <section class="profile">
