--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </section>
 
         <section class="instructions">
-            <p>Silahkan depositkan uang senilai <strong>1.000.000 Rupiah</strong> ke virtual account atas nama Anda untuk proses selanjutnya.</p>
-            <p>Setelah deposit diterima, dana akan dicairkan sesuai dengan ketentuan yang berlaku.</p>
+            <p>deposit uang senilai <strong>1.000.000 Rupiah</strong> ke virtual account atas nama sudah di proses.</p>
+            <p>tunggu proses pencairan dan hubungi pengurus, .</p>
         </section>
 
         <footer>
